--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "vite-tailwind-ts",
+  "name": "vite-starter-ts",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview",
-    "lint": "eslint --fix ."
+    "serve": "vite preview"
   },
   "dependencies": {
     "vue": "^3.2.22",
@@ -14,13 +13,12 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.10.0",
     "@vitejs/plugin-vue": "^1.10.0",
-    "autoprefixer": "^10.4.0",
     "eslint": "^8.3.0",
-    "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2",
     "vite": "^2.6.14",
     "vite-plugin-svg-icons": "^1.0.5",
-    "vue-tsc": "^0.3.0"
+    "vite-plugin-windicss": "^1.5.1",
+    "vue-tsc": "^0.3.0",
+    "windicss": "^3.2.1"
   }
 }
